# litellm-pyodide

./: .gitignore  README.md  biome.json  build.ts  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
.github/workflows/: pages.yml
demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/src/: App.tsx  demo-config.ts  demo-models.ts  main.tsx  route-adapters.ts  runtime-loader.ts  startup-status.ts  styles.css  sw.ts
demo/tests/: browser-smoke.test.ts  route-adapters.test.ts  startup-status.test.ts
python/: bridge.py  wheels-source.json
python/litellm_overlay/: pyproject.toml
python/litellm_overlay/src/litellm/: __init__.py
python/litellm_overlay/src/litellm/integrations/: __init__.py  custom_logger.py
src/: client.ts  errors.ts  index.ts  types.ts
src/internal/: metadata.ts  pool-adapter.ts  runtime-manifest.ts  worker-types.ts  worker.ts
src/runtime/: detect.ts
tests/: browser-smoke.test.ts  integration.test.ts  metadata.test.ts  runtime-detect.test.ts
tests/helpers/: mock-provider.ts
